--- a/x-tag/index.html
+++ b/x-tag/index.html
@@ -15,11 +15,11 @@
                 <h1>X-Tag</h1>
                 <h2>A presentation by David Lorenz</h2>
                 <p>
-                    <a class="blueish" href="http://activenode.de">activenode.de</a>
+                    <a class="blueish" target="_blank" href="http://activenode.de">activenode.de</a>
                 </p>
                 <p>
-                    <a class="greenish" href="https://github.com/activenode">@github</a>,
-                    <a class="greenish" href="https://github.com/activenode">@twitter</a>
+                    <a class="greenish" target="_blank" href="https://github.com/activenode">@github</a>,
+                    <a class="greenish" target="_blank" href="https://twitter.com/dev_activenode">@twitter</a>
                 </p>
             </x-slide-item>
         </x-slide>
@@ -222,6 +222,44 @@
                 </x-slide-item-code>
             </x-slide-item>
         </x-slide>
+
+        <x-slide>
+          <x-slide-item>
+            <h2>Easy!</h2>
+
+            <p>
+              Now go ahead, manipulate the DOM and try the following:
+            </p>
+
+            <x-slide-item-code lang="html">
+              <!--
+              <x-giphy tag="weird cat"></x-giphy>
+              <x-giphy tag="wow doge"></x-giphy>
+              <x-twitter tag="webdevbbq"></x-twitter>
+              -->
+            </x-slide-item-code>
+          </x-slide-item>
+        </x-slide>
+
+        <x-slide>
+          <x-slide-item>
+            <article>
+              <h1>Thank you</h1>
+
+              <h3>Go on here:</h3>
+              <p>
+                <a class="blueish" target="_blank" href="http://x-tag.github.io/">http://x-tag.github.io/</a>
+              </p>
+
+              <p>
+                and checkout this presentation which is built entirely (!) on x-tag:
+                <a class="blueish" target="_blank" href="https://github.com/activenode/presentations/x-tag">https://github.com/activenode/presentations/x-tag</a>
+              </p>
+            </article>
+          </x-slide-item>
+        </x-slide>
+
+
     </x-presentation>
 
     <script src="custom/presentation.js" async defer></script>
