x-Tag Presentation Update

--- a/x-tag/index.html
+++ b/x-tag/index.html
@@ -252,8 +252,8 @@
               </p>
 
               <p>
-                and checkout this presentation which is built entirely (!) on x-tag:
-                <a class="blueish" target="_blank" href="https://github.com/activenode/presentations/x-tag">https://github.com/activenode/presentations/x-tag</a>
+                <small>and checkout this presentation which is built entirely (!) on x-tag:</small>
+                <a class="blueish" target="_blank" href="https://github.com/activenode/presentations/tree/master/x-tag">https://github.com/activenode/presentations/tree/master/x-tag</a>
               </p>
             </article>
           </x-slide-item>
