--- a/x-tag/index.html
+++ b/x-tag/index.html
@@ -255,6 +255,10 @@
                 <small>and checkout this presentation which is built entirely (!) on x-tag:</small>
                 <a class="blueish" target="_blank" href="https://github.com/activenode/presentations/tree/master/x-tag">https://github.com/activenode/presentations/tree/master/x-tag</a>
               </p>
+
+              <p>
+                X-Tag works everywhere, this presentation is still optimized for Chrome
+              </p>
             </article>
           </x-slide-item>
         </x-slide>
