--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-http://activenode.github.io/p/x-tag/
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>activenode Github</title>
+    <meta http-equiv="refresh" content="0; url=https://github.com/activenode/activenode.github.io/blob/master/README.md" />
+</head>
+<body>
+    
+</body>
+</html>
